# open-wallpaper-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  deps.json
host/: CMakeLists.txt  main.cpp  proto.hpp  uds.cpp  uds.hpp
src/: SceneWallpaper.cpp  SceneWallpaper.hpp  WPSceneParser.cpp
src/Audio/: CMakeLists.txt  miniaudio-wrapper.hpp
src/Swapchain/: ExSwapchain.hpp  TripleSwapchain.hpp
src/Vulkan/: Parameters.cpp  Shader.cpp  TextureCache.cpp  vulkan_wrapper.cpp
src/VulkanRender/: Resource.hpp  VulkanRender.cpp
standalone_view/: CMakeLists.txt
tests/: CMakeLists.txt  corpus.cpp  corpus.hpp  dump.cpp  dump.hpp  fixture_helpers.hpp  version_tests.cpp  wpdump_main.cpp
tests/fixtures/format_0/: 2281052567.json
tests/fixtures/format_4/: 1120440003.json
tests/fixtures/format_6/: 1721043273.json
tests/fixtures/mdlv_13/: 2186130002.json
tests/fixtures/mdlv_14/: 2835012244.json
tests/fixtures/mdlv_16/: 2664591394.json
tests/fixtures/mdlv_17/: 2370640409.json
tests/fixtures/mdlv_4/: 1548688862.json
tests/fixtures/pkgv_0001/: 1120440003.json  960368411.json
tests/fixtures/pkgv_0002/: 1139304621.json  1845706469.json
tests/fixtures/pkgv_0003/: 1883906261.json
tests/fixtures/pkgv_0004/: 1303867053.json  1913713371.json
tests/fixtures/pkgv_0005/: 1444077782.json  1993699454.json
tests/fixtures/pkgv_0006/: 1583040279.json  (+1 more)
tests/version/: format_0_test.cpp  format_4_test.cpp  format_6_test.cpp  mdlv_13_test.cpp  mdlv_16_test.cpp  mdlv_17_test.cpp  mdlv_4_test.cpp  pkgv_0001_test.cpp  pkgv_0002_test.cpp  pkgv_0003_test.cpp  pkgv_0004_test.cpp  pkgv_0005_test.cpp  pkgv_0006_test.cpp  pkgv_0007_test.cpp  pkgv_0008_test.cpp  pkgv_0009_test.cpp  pkgv_0010_test.cpp  pkgv_0011_test.cpp  pkgv_0012_test.cpp  pkgv_0013_test.cpp  pkgv_0014_test.cpp  pkgv_0015_test.cpp  pkgv_0016_test.cpp  pkgv_0017_test.cpp  pkgv_0018_test.cpp  pkgv_0019_test.cpp  pkgv_0020_test.cpp  pkgv_0021_test.cpp  pkgv_0022_test.cpp  pkgv_0023_test.cpp  texb_1_test.cpp  texb_2_test.cpp  texb_3_test.cpp  texb_4_test.cpp
waywallen/: CMakeLists.txt
waywallen/host/: CMakeLists.txt  main.cpp
waywallen/renderers/: wescene.toml
waywallen/sources/: wallpaper_engine.lua
(+41 files in other folders)
